--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,24 @@
 # theme: jekyll-theme-minimal
+
+
+title: dead dot pink # name of the site
+author: dead # name of site's author
+email: no email # email of site's author
+url: https://dead.pink # root address of the site
+#baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+description: > # description of the site (multiple lines allowed)
+  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+
+# permalink: /:slug.html
+
+# favicon: "logo.png" # name+extension of favicon (which must be put on the root folder)
+# goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
+
 remote_theme: riggraz/no-style-please
+
+theme_config:
+  appearance: "auto" # can be "light", "dark" or "auto"
+  back_home_text: ".." # customize text for homepage link in post layout
+  date_format: "%Y-%m-%d" # customize how date is formatted
+  show_description: false # show blog description in home page
+
