--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,9 @@
 # For documentation on this file, see:
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
+<link rel="stylesheet" href="mystyle.css">
+
+
 entries:
   - title: info
     entries:
